<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CurrencyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView

            android:id="@+id/iv_back"
            style="@style/imageViewStyle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView

        app:layout_constraintLeft_toRightOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"


        style="@style/headingTextBold"
        android:id="@+id/tv_title"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"/>
        <androidx.appcompat.widget.SearchView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/searchView"
            android:iconifiedByDefault="false"
            app:closeIcon="@null"
            android:background="@drawable/button_bg"
            android:backgroundTint="?attr/colorDark"
            app:iconifiedByDefault="false"
            android:focusedByDefault="true"
            app:defaultQueryHint="@string/search"
            android:queryHint="@string/title_search"
            android:closeIcon="@null"
            style="@style/searchView"/>
        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/recyclerview"
            tools:listitem="@layout/item_currency"/>


    <com.google.android.material.button.MaterialButton

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        style="@style/buttonMaterial"
        android:id="@+id/btn_save"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>